test/neg/ebind-04.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k2 ((v Int)))
(wf $k1 ((v Int)))


; Horn Constraints
(constraint (forall ((x Int)(v1 Int)) (=> (and True ($k1 v1)) (= v1 x))))
(constraint (forall ((x Int)(v2 Int)) (=> (and True (= v2 (+ x 1))) ($k2 v2))))
(constraint (forall ((v3 Int)) (=> (= v3 3) ($k1 v3))))
(constraint (forall ((v4 Int)) (=> ($k2 v4) (= v4 40))))
